--- a/src/view/equipe.html
+++ b/src/view/equipe.html
@@ -21,18 +21,19 @@
 
 <body>
 
-    <nav class="navbar bg-body-tertiary">
-        <div class="container">
-            <a class="navbar-brand" href="https://www.instagram.com/steelbullsfrc/" target="_blank">
-                <img src="../../frc-9460/assets/image/bullslogo-removebg.png" alt="Bootstrap" width="100" height="94">
-            </a>
-            <a class="nav-link active" aria-current="page" href="#">FRC</a>
-            <a class="nav-link active" aria-current="page" href="#">Sobre nós</a>
-            <a class="nav-link active" aria-current="page" href="#">O que fazemos</a>
-            <a class="nav-link active" aria-current="page" href="#">Equipe</a>
-        </div>
-    </nav>
+  <nav class="navbar bg-body-tertiary">
+    <div class="container">
+      <a class="navbar-brand" href="https://www.instagram.com/steelbullsfrc/" target="_blank">
 
+        <img src="../../frc-9460/assets/image/bullslogo-removebg.png" alt="Bootstrap" width="100" height="94">
+      </a>
+      <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+      <a class="nav-link active" aria-current="page" href="/index.html">FRC</a>
+      <a class="nav-link active" aria-current="page" href="#">Sobre Nós</a>
+      <a class="nav-link active" aria-current="page" href="/mascote.html">Mascote</a>
+      <a class="nav-link active" aria-current="page" href="/equipe.html">Equipe</a>
+    </div>
+  </nav>
     <!-- cards-->
     <div class="cards-competidores">
         <div class="card" style="width: 18rem;">
@@ -74,6 +75,96 @@
                 <p class="card-text">Area</p>
        </div>
     </div>
+
+</div>
+<div class="cards-competidores">
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 6</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 7</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 8</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 9</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 10</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+</div>
+
+<div class="cards-competidores">
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 11</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 12</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 13</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 14</p>
+      <p class="card-text">Area </p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../../frc-9460/assets/image/bullslogo-removebg.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Competidor 15</p>
+      <p class="card-text">Area</p>
+    </div>
+  </div>
+
+</div>
+</body>
+
+</html>
 </body>
 
 </html>
