--- a/src/view/index.html
+++ b/src/view/index.html
@@ -26,10 +26,11 @@
             <a class="navbar-brand" href="https://www.instagram.com/steelbullsfrc/" target="_blank">
                 <img src="../../frc-9460/assets/image/bullslogo-removebg.png" alt="Bootstrap" width="100" height="94">
             </a>
-            <a class="nav-link active" aria-current="page" href="#">FRC</a>
+            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">FRC</a>
             <a class="nav-link active" aria-current="page" href="#">Sobre nós</a>
-            <a class="nav-link active" aria-current="page" href="#">O que fazemos</a>
-            <a class="nav-link active" aria-current="page" href="#">Equipe</a>
+            <a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a>
+            <a class="nav-link active" aria-current="page" href="mascote.html">Mascote</a>
         </div>
     </nav>
 
